--- a/ex2-web-fonts/style.css
+++ b/ex2-web-fonts/style.css
@@ -1,1 +1,8 @@
-/* Start coding here */
+@font-face {
+  font-family: "2005_ianCPU";
+  src: url(./fonts/2005_iannnnnCPU.ttf);
+}
+
+* {
+  font-family: "2005_ianCPU";
+}
