--- a/ex2-web-fonts/style.css
+++ b/ex2-web-fonts/style.css
@@ -1,1 +1,9 @@
 /* Start coding here */
+@font-face {
+  font-family: "2005_iannnnnCPU";
+  src: url(./fonts/2005_iannnnnCPU.ttf);
+}
+
+body {
+  font-family: "2005_iannnnnCPU";
+}
